Fix spacing between white sections

--- a/src/main/frontend/styles/main.scss
+++ b/src/main/frontend/styles/main.scss
@@ -217,6 +217,8 @@ html {
 }
 
 .home-header {
+  margin-bottom: 1.5rem;
+
   &__columns {
     flex-direction: row-reverse;
   }
@@ -334,11 +336,9 @@ html {
 }
 
 // Remove padding between white content blocks
-/*
 .section:not(.has-background) + .section:not(.has-background) {
   padding-top: 0;
 }
-*/
 
 .app-cookie-line {
   padding-top: 1em;
